🐛 💄 Fix header display name align issue

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -205,7 +205,7 @@ header {
   }
   .user {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     span {
       color: var(--dark-orange);
